Fixed double scroll bar and started Auth

--- a/burgerbin-app/src/index.css
+++ b/burgerbin-app/src/index.css
@@ -5,17 +5,14 @@
 /* GOOGLE FONTS
 /* font-family: 'Roboto Condensed', sans-serif; */
 
-html,body
-{
-    width: 100%;
-    overflow-x: hidden; 
-}
 
 body {
   margin: 0;
   font-family: 'Roboto Condensed', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  overflow-x: hidden; 
 }
 
 code {
